# StockDesk

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  ruff.toml
apps/audit/: admin.py  admin_mixins.py  models.py  services.py  tests.py
apps/audit/migrations/: 0001_initial.py  0002_initial.py
apps/finance/: admin.py  dtos.py  models.py  services.py
apps/finance/migrations/: 0001_initial.py
apps/products/: admin.py  models.py
apps/products/migrations/: 0001_initial.py  0002_rename_selling_price_to_buying_price.py  0003_make_buying_price_optional.py  0004_alter_product_options_alter_product_managers_and_more.py
apps/reports/: admin.py  dashboard.py  selectors.py  tests.py  views.py
apps/sales/: admin.py  dtos.py  models.py  services.py  tests.py
apps/sales/migrations/: 0001_initial.py  0002_alter_sale_selling_price.py
apps/stock/: admin.py  damage_services.py  dtos.py  models.py  selectors.py  services.py  tests.py
apps/stock/migrations/: 0001_initial.py
apps/suppliers/: admin.py  models.py
apps/suppliers/migrations/: 0001_initial.py  0002_alter_supplier_options_alter_supplier_managers_and_more.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
docs/agent/: decisions.md  patterns.md  pitfalls.md  tasks.md
templates/admin/: index.html
